--- a/app/components/contents-pool/contents-pool.tpl.html
+++ b/app/components/contents-pool/contents-pool.tpl.html
@@ -2,15 +2,6 @@
     <md-toolbar class="content-table-header md-default bk-trans">
       <div class="md-toolbar-tools">
         <span class="m-r-20">Contents Pool</span>
-        <!-- <button type="button"
-                class="btn btn-primary tip btn-xs"
-                data-toggle="tooltip"
-                data-original-title="Help?"
-                ui-jq="tooltip"
-                ng-click="vm.help()"
-                aria-label="click for help">
-          <i class="fa fa-question" aria-hidden="true"></i>
-        </button> -->
       </div>
     </md-toolbar>
 
@@ -55,14 +46,6 @@
                       ng-click="vm.see(post)">
                 <i class="fa fa-eye" aria-hidden="true"></i>
               </button>
-              <!-- <button type="button"
-                      class="btn btn-complete tip btn-xs"
-                      data-toggle="tooltip"
-                      data-original-title="Analytics"
-                      ui-jq="tooltip"
-                      ng-click="vm.graph(post)">
-                <i class="fa fa-line-chart" aria-hidden="true"></i>
-              </button> -->
             </td>
             <td md-cell class="td-p-r-0">
               <button type="button"
@@ -79,41 +62,6 @@
         </tbody>
       </table>
     </md-table-container>
-</div>
-
-<div class="modal fade slide-up disable-scroll"
-     id="modalContentHelp"
-     tabindex="-1"
-     role="dialog"
-     aria-hidden="false">
-    <div class="modal-dialog ">
-        <div class="modal-content-wrapper">
-            <div class="modal-content">
-                <div class="modal-header clearfix text-left">
-                  <button type="button"
-                          class="close"
-                          data-dismiss="modal"
-                          aria-hidden="true">
-                    X
-                  </button>
-                  <h5>Content Help</h5>
-                  <span class="sub-title">How Content table work?</span>
-                </div>
-                <div class="modal-body">
-                  <p>Content table, will get contents from pages that are in the
-                     hack pool on listening mode. However, It's a near real time
-                      application getting only those content within an hour ago,
-                      once it find a content, every 5 seconds update all
-                     contents and look for more. Will be update numbers of likes
-                     , shares and comments.</p>
-
-                  <img src="../images/steps-steps.png"
-                       alt="Steps of how Contents table work"
-                       class="hidden-xs hidden-sm"/>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 
 <div class="modal fade slide-up disable-scroll"
@@ -149,36 +97,12 @@
                     </div>
                 </div>
                 <div class="modal-body content-body">
-                  <div ng-show="vm.selected.type ==  'photo'">
-                    <img ng-src="{{vm.selected.full_picture}}"
-                         width="548"
-                         height="350"
-                         alt="Image of content" />
-                  </div>
-
-                  <div ng-show="vm.selected.type === 'link'">
+                  <div >
                     <p>{{vm.selected.message}}</p>
                     <img ng-src="{{vm.selected.full_picture}}"
                          alt="Image of content"
-                         width="548"
-                         height="350" />
-                    <a ng-href="{{vm.selected.link}}"
-                       target="_blank"
-                       tabindex="0">Content</a>
+                         class="img-responsive" />
                   </div>
-
-                  <div ng-show="vm.selected.type === 'video'">
-                    <iframe  target="_top"
-                             class="youtube-player"
-                             type="text/html"
-                             width="548"
-                             height="350"
-                             ng-src="{{vm.trustSrc()}}"
-                             allowfullscreen
-                             frameborder="0">
-                    </iframe>
-                  </div>
-
                 </div>
             </div>
         </div>
