--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -178,6 +178,7 @@ span.footer-label {
   margin-top: 20px;
   padding: 0;
   border-bottom: 1px solid;
+  padding-bottom: 5px;
 }
 
 .contents .content-table-header {
@@ -217,7 +218,7 @@ span.footer-label {
     padding: 0px !important;
 
     .modal-body {
-      padding: 0px !important;
+      padding: 10px !important;
     }
   }
 }
