--- a/app/views/core/login.html
+++ b/app/views/core/login.html
@@ -10,8 +10,10 @@
   <div class="text-center hidden-xs hidden-sm">
     <div class="btn-group btn-m-t" role="group">
       <button class="btn btn-primary btn-facehack"
-              tabindex="0" ng-click="vm.login_desktop()"
-              aria-label="Click here to login into Application using your facebook account">
+              tabindex="0"
+              ng-click="vm.login_desktop()"
+              aria-label="Click here to login"
+              autofocus>
         <span ng-show="vm.lamp">Facehack</span>
         <span ng-show="!vm.lamp">185.60.216.35</span>
       </button>
