--- a/app/views/blocks/sidebar.html
+++ b/app/views/blocks/sidebar.html
@@ -48,7 +48,10 @@
         </span>
       </li>
 
-      <li class="open" ui-sref-active="active" ng-click="go('app.content')">
+      <li class="open"
+          ui-sref-active="active"
+          ng-click="go('app.content')"
+          ng-class="{'m-t-30': !isConnected}">
         <a class="detailed">
           <span class="title">Database</span>
         </a>
