--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,4 +1,4 @@
-@import 'http://weloveiconfonts.com/api/?family=entypo';
+// @import 'http://weloveiconfonts.com/api/?family=entypo';
 
 * {
   box-sizing: border-box;
