--- a/app/styles/pages.scss
+++ b/app/styles/pages.scss
@@ -58,7 +58,7 @@ Generated From LESS
 /*------------------------------------------------------------------
 [1. Layouts]
 */
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+// @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 html {
   height: 100%;
 }
